--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "cordova-plugin-googleplus": "^8.2.0",
     "core-js": "^2.5.4",
     "firebase": "^7.2.1",
     "rxjs": "~6.5.1",
@@ -57,5 +58,10 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-googleplus": {}
+    }
+  }
 }
