--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/google-plus": "^5.15.1",
+    "@ionic-native/photo-library": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-plugin-googleplus": "^8.2.0",
+    "cordova-plugin-photo-library": "^2.2.1",
     "core-js": "^2.5.4",
     "firebase": "^7.2.1",
     "rxjs": "~6.5.1",
@@ -62,7 +64,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-googleplus": {}
+      "cordova-plugin-googleplus": {},
+      "cordova-plugin-photo-library": {}
     }
   }
 }
