--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
     "plugins": {
       "cordova-plugin-photo-library": {},
       "cordova-plugin-android-permissions": {},
-      "cordova-plugin-camera": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
       "cordova-plugin-geolocation": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
@@ -94,7 +96,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
