--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "br-mask": "0.0.8",
     "cordova-android": "^8.1.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-android-permissions": "^1.0.2",
@@ -39,7 +40,7 @@
     "cordova-plugin-googleplus": "^8.2.0",
     "cordova-plugin-photo-library": "^2.2.1",
     "core-js": "^2.5.4",
-    "firebase": "^7.2.1",
+    "firebase": "^7.2.3",
     "ionic": "^5.4.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
